--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### Server
-server.port=8080
+server.port=9090
 
 ### Log
 logging.file.path=@logs.path@
@@ -25,13 +25,15 @@ info.app.ip=${spring.cloud.client.ip-address}
 info.app.profile=${spring.profiles.active}
 
 ### JPA
-spring.datasource.url=${dbUrl}
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${dbUser}
-spring.datasource.password=${dbPass}
+#spring.datasource.url=${dbUrl}
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=${dbUser}
+#spring.datasource.password=${dbPass}
+#
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.generate-ddl=true
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.generate-ddl=true
+
